# libosession

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: clang-tidy.yml
cmake/: osessionConfig.cmake.in
include/osession/: osession.hpp
src/: file.cpp
tests/: test_basic.cpp
